# Team_17

./: README.md  main.py  pyproject.toml
Data/: master_customer_matrix_260329.csv  master_customers_final.csv
Notebooks/김혜수/: pre.ipynb  test.txt  시각화_0323.ipynb  통계.ipynb
Notebooks/김희선/: 260320_eda.ipynb  260321_eda.ipynb  260322_시각화.ipynb  260324_시각화.ipynb  260325_transactions 테이블 생성.ipynb  260325_시각화.ipynb  260325_전처리 수정.ipynb  260325_전처리 찐막기원.ipynb  260327_시각화_최종.ipynb  시각화 목록.md
Notebooks/김희선/archive/: 260321_eda.ipynb  260322_시각화.ipynb  260324_시각화.ipynb  260325_순서 확인.ipynb
Notebooks/문다현/: 260326_다현_시각화.ipynb  260328_시각화_최종.ipynb  260329_시각화_최종.ipynb  pre.ipynb  pre2.ipynb  pre3_260325.ipynb  pre4_260326.ipynb  test.txt  y_pre.ipynb  시각화_취합.ipynb
Notebooks/송원우/: 260322_preprocessed.ipynb  260323_시각화.ipynb  260326_고객세그먼트_시각화 및 통계.ipynb  260327_시각화_최종.ipynb  260328_고객세그먼트_대시보드.twb  260329_고객세그먼트_시각화 및 통계(수정본).ipynb  260331_EDA및시각화_최종.ipynb  preprocessing.ipynb
Notebooks/오해찬/: 01.ipynb  01시각화.ipynb  02시각화-기본8종(매출x).ipynb  02시각화.ipynb  03시각화-매출.ipynb  04시각화-퍼널1.ipynb  260326오해찬시각화-기본8종.ipynb  260326오해찬시각화-오퍼별8종 copy.ipynb  260326오해찬시각화-오퍼별8종.ipynb  260326오해찬시각화-채널별8종.ipynb  memo.txt  portfolio.ipynb  profile.ipynb  starbucks_menu_260112.ipynb  test.txt  transcript.ipynb  오해찬 오퍼&채널별 시각화.ipynb  이것도안보셔도됩니다.ipynb  통계해찬.ipynb
Reports/: heeseon_log.md
